--- a/instacart_erd_staging_queries.ipynb
+++ b/instacart_erd_staging_queries.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following are primary keys because it matched with the firsy query ran for this table."
+    "The following is a primary key because it matched with the firsy query ran for this table."
    ]
   },
   {
@@ -523,12 +523,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following are primary keys because it matched with the first query ran for this table."
+    "The following is a primary key because it matched with the first query ran for this table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "0  49688"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,14 +577,6 @@
    "source": [
     "%%bigquery\n",
     "select count(distinct product_id) from instacart_staging.Products"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "%%bigquery\n",
-    "select count(distinct product_name) from instacart_staging.Products"
    ]
   },
   {
@@ -1050,7 +1042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following are primary keys because it matched with the first query ran for this table."
+    "The following is a primary key because it matched with the first query ran for this table."
    ]
   },
   {
