--- a/instacart_joins.ipynb
+++ b/instacart_joins.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
+       "      <th>order_number</th>\n",
        "      <th>product_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -182,91 +183,103 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>XL Pick-A-Size Paper Towel Rolls</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Soda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Organic Unsweetened Vanilla Almond Milk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Original Beef Jerky</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>Aged White Cheddar Popcorn</td>\n",
+       "      <td>1</td>\n",
+       "      <td>XL Pick-A-Size Paper Towel Rolls</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>Organic Unsweetened Vanilla Almond Milk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Soda</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>1</td>\n",
        "      <td>Aged White Cheddar Popcorn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cinnamon Toast Crunch</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>Bag of Organic Bananas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1</td>\n",
-       "      <td>Cinnamon Toast Crunch</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Pistachios</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1</td>\n",
-       "      <td>Pistachios</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Aged White Cheddar Popcorn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>Original Beef Jerky</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>1</td>\n",
-       "      <td>Pistachios</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Soda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    user_id                             product_name\n",
-       "0         1         XL Pick-A-Size Paper Towel Rolls\n",
-       "1         1                                     Soda\n",
-       "2         1                      Original Beef Jerky\n",
-       "3         1               Aged White Cheddar Popcorn\n",
-       "4         1  Organic Unsweetened Vanilla Almond Milk\n",
-       "5         1                                     Soda\n",
-       "6         1               Aged White Cheddar Popcorn\n",
-       "7         1                   Bag of Organic Bananas\n",
-       "8         1                    Cinnamon Toast Crunch\n",
-       "9         1                               Pistachios\n",
-       "10        1                      Original Beef Jerky\n",
-       "11        1                               Pistachios"
+       "    user_id  order_number                             product_name\n",
+       "0         1             1                                     Soda\n",
+       "1         1             1  Organic Unsweetened Vanilla Almond Milk\n",
+       "2         1             1                      Original Beef Jerky\n",
+       "3         1             1         XL Pick-A-Size Paper Towel Rolls\n",
+       "4         1             1               Aged White Cheddar Popcorn\n",
+       "5         1             2                    Cinnamon Toast Crunch\n",
+       "6         1             2                                     Soda\n",
+       "7         1             2                   Bag of Organic Bananas\n",
+       "8         1             2                               Pistachios\n",
+       "9         1             2               Aged White Cheddar Popcorn\n",
+       "10        1             2                      Original Beef Jerky\n",
+       "11        1             3                                     Soda"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "select o.user_id, p.product_name\n",
+    "select o.user_id, o.order_number, p.product_name\n",
     "from instacart_staging.Products p join instacart_staging.Order_Products_Prior op on p.product_id = op.product_id\n",
     "join instacart_staging.Orders o on op.order_id = o.order_id\n",
     "order by user_id, order_number\n",
