--- a/instacart_modeled.ipynb
+++ b/instacart_modeled.ipynb
@@ -2921,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3000,7 @@
        "6          6  448761"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3014,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3028,7 +3028,7 @@
       " datasetId: 'instacart_modeled'\n",
       " projectId: 'responsive-cab-267123'\n",
       " tableId: 'Orders'> referenced by query SELECT order_id, user_id, order_number, order_dow, order_hour_of_day, days_since_prior_order FROM instacart_modeled.Orders limit 100\n",
-      "WARNING:apache_beam.io.gcp.bigquery_tools:Dataset responsive-cab-267123:temp_dataset_26e45eae7f4746dcaef8379beb9399ce does not exist so we will create it as temporary with location=US\n"
+      "WARNING:apache_beam.io.gcp.bigquery_tools:Dataset responsive-cab-267123:temp_dataset_4ee5704ac77748e9b8b4624e22476976 does not exist so we will create it as temporary with location=US\n"
      ]
     },
     {
@@ -3267,11 +3267,11 @@
       " mode: 'NULLABLE'\n",
       " name: 'days_since_prior_order'\n",
       " type: 'INTEGER'>]>. Result: <Table\n",
-      " creationTime: 1583111291620\n",
-      " etag: 'TmBsmaofP9XhXT91LmnyhQ=='\n",
+      " creationTime: 1583112795694\n",
+      " etag: 'BLew/DnahMcxwX5vj3Hagg=='\n",
       " id: 'responsive-cab-267123:instacart_modeled.Orders_Beam'\n",
       " kind: 'bigquery#table'\n",
-      " lastModifiedTime: 1583111291656\n",
+      " lastModifiedTime: 1583112795744\n",
       " location: 'US'\n",
       " numBytes: 0\n",
       " numLongTermBytes: 0\n",
@@ -3308,7 +3308,11 @@
       " projectId: 'responsive-cab-267123'\n",
       " tableId: 'Orders_Beam'>\n",
       " type: 'TABLE'>.\n",
-      "WARNING:apache_beam.io.gcp.bigquery_tools:Sleeping for 150 seconds before the write as BigQuery inserts can be routed to deleted table for 2 mins after the delete and create.\n"
+      "WARNING:apache_beam.io.gcp.bigquery_tools:Sleeping for 150 seconds before the write as BigQuery inserts can be routed to deleted table for 2 mins after the delete and create.\n",
+      "INFO:apache_beam.io.filebasedsink:Starting finalize_write threads with num_shards: 1 (skipped: 0), batches: 1, num_threads: 1\n",
+      "INFO:apache_beam.io.filebasedsink:Renamed 1 shards in 0.10 seconds.\n",
+      "INFO:apache_beam.io.filebasedsink:Starting finalize_write threads with num_shards: 1 (skipped: 0), batches: 1, num_threads: 1\n",
+      "INFO:apache_beam.io.filebasedsink:Renamed 1 shards in 0.10 seconds.\n"
      ]
     }
    ],
@@ -3318,7 +3322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3347,21 +3351,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sunday</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  order_dow  f0_\n",
-       "0    sunday  100"
+       "Empty DataFrame\n",
+       "Columns: [order_dow, f0_]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3382,7 +3382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3412,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>100</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3420,10 +3420,10 @@
       ],
       "text/plain": [
        "   f0_\n",
-       "0  100"
+       "0    0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3435,7 +3435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3465,7 +3465,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>100</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3473,10 +3473,10 @@
       ],
       "text/plain": [
        "   f0_\n",
-       "0  100"
+       "0    0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
