--- a/instacart_modeled.ipynb
+++ b/instacart_modeled.ipynb
@@ -2921,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3000,7 @@
        "6          6  448761"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3014,21 +3014,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING:apache_beam.runners.interactive.interactive_environment:Interactive Beam requires Python 3.5.3+.\n",
+      "WARNING:apache_beam.runners.interactive.interactive_environment:Dependencies required for Interactive Beam PCollection visualization are not available, please use: `pip install apache-beam[interactive]` to install necessary dependencies to enable all data visualization features.\n",
       "/home/jupyter/venv/lib/python3.5/site-packages/apache_beam/io/gcp/bigquery.py:1421: BeamDeprecationWarning: options is deprecated since First stable release. References to <pipeline>.options will not be supported\n",
       "  experiments = p.options.view_as(DebugOptions).experiments or []\n",
       "INFO:apache_beam.runners.direct.direct_runner:Running pipeline with DirectRunner.\n",
+      "INFO:apache_beam.internal.gcp.auth:Setting socket default timeout to 60 seconds.\n",
+      "INFO:apache_beam.internal.gcp.auth:socket default timeout is 60.0 seconds.\n",
+      "INFO:oauth2client.transport:Attempting refresh to obtain initial access_token\n",
       "INFO:apache_beam.io.gcp.bigquery_tools:Using location 'US' from table <TableReference\n",
       " datasetId: 'instacart_modeled'\n",
       " projectId: 'responsive-cab-267123'\n",
-      " tableId: 'Orders'> referenced by query SELECT order_id, user_id, order_number, order_dow, order_hour_of_day, days_since_prior_order FROM instacart_modeled.Orders limit 100\n",
-      "WARNING:apache_beam.io.gcp.bigquery_tools:Dataset responsive-cab-267123:temp_dataset_4ee5704ac77748e9b8b4624e22476976 does not exist so we will create it as temporary with location=US\n"
+      " tableId: 'Orders'> referenced by query SELECT * FROM instacart_modeled.Orders limit 100\n",
+      "WARNING:apache_beam.io.gcp.bigquery_tools:Dataset responsive-cab-267123:temp_dataset_3a549dd71b8044d5907fcb43114d26be does not exist so we will create it as temporary with location=US\n"
      ]
     },
     {
@@ -3267,11 +3272,11 @@
       " mode: 'NULLABLE'\n",
       " name: 'days_since_prior_order'\n",
       " type: 'INTEGER'>]>. Result: <Table\n",
-      " creationTime: 1583112795694\n",
-      " etag: 'BLew/DnahMcxwX5vj3Hagg=='\n",
+      " creationTime: 1583113459989\n",
+      " etag: 'rL5K9+j+2psvG/mIln6sow=='\n",
       " id: 'responsive-cab-267123:instacart_modeled.Orders_Beam'\n",
       " kind: 'bigquery#table'\n",
-      " lastModifiedTime: 1583112795744\n",
+      " lastModifiedTime: 1583113460041\n",
       " location: 'US'\n",
       " numBytes: 0\n",
       " numLongTermBytes: 0\n",
@@ -3310,7 +3315,7 @@
       " type: 'TABLE'>.\n",
       "WARNING:apache_beam.io.gcp.bigquery_tools:Sleeping for 150 seconds before the write as BigQuery inserts can be routed to deleted table for 2 mins after the delete and create.\n",
       "INFO:apache_beam.io.filebasedsink:Starting finalize_write threads with num_shards: 1 (skipped: 0), batches: 1, num_threads: 1\n",
-      "INFO:apache_beam.io.filebasedsink:Renamed 1 shards in 0.10 seconds.\n",
+      "INFO:apache_beam.io.filebasedsink:Renamed 1 shards in 0.11 seconds.\n",
       "INFO:apache_beam.io.filebasedsink:Starting finalize_write threads with num_shards: 1 (skipped: 0), batches: 1, num_threads: 1\n",
       "INFO:apache_beam.io.filebasedsink:Renamed 1 shards in 0.10 seconds.\n"
      ]
@@ -3322,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3351,17 +3356,21 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunday</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [order_dow, f0_]\n",
-       "Index: []"
+       "  order_dow  f0_\n",
+       "0    sunday  100"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3382,7 +3391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3421,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3420,10 +3429,10 @@
       ],
       "text/plain": [
        "   f0_\n",
-       "0    0"
+       "0  100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3435,7 +3444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3465,7 +3474,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3473,10 +3482,10 @@
       ],
       "text/plain": [
        "   f0_\n",
-       "0    0"
+       "0  100"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
