Updated queries and views

--- a/instacart_analysis.ipynb
+++ b/instacart_analysis.ipynb
@@ -784,15 +784,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "explanation"
+    "This query would be useful to stores because it details which days of the week involve the most item purchases. Here, we see that the most items are purchased on Sundays."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>Total_Purchases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunday</td>\n",
+       "      <td>46429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>monday</td>\n",
+       "      <td>46081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>saturday</td>\n",
+       "      <td>45931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>45723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tuesday</td>\n",
+       "      <td>45375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>wednesday</td>\n",
+       "      <td>45258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>thursday</td>\n",
+       "      <td>45159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_dow  Total_Purchases\n",
+       "0     sunday            46429\n",
+       "1     monday            46081\n",
+       "2   saturday            45931\n",
+       "3     friday            45723\n",
+       "4    tuesday            45375\n",
+       "5  wednesday            45258\n",
+       "6   thursday            45159"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "SELECT os.order_dow, count(distinct op.product_id) as Total_Purchases\n",
+    "  FROM\n",
+    "    (SELECT order_id\n",
+    "    FROM instacart_modeled.Orders\n",
+    "    GROUP BY order_id) us\n",
+    "  RIGHT OUTER JOIN instacart_modeled.Orders_Beam_DF os\n",
+    "  ON us.order_id=os.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Order_Products op\n",
+    "ON us.order_id=op.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Products p\n",
+    "ON op.product_id=p.product_id\n",
+    "WHERE os.order_dow IS NOT NULL\n",
+    "GROUP BY os.order_dow\n",
+    "ORDER BY Total_Purchases desc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -805,15 +902,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "explanation"
+    "This query would be useful to the Instacart company because it details which days of the week involve the most orders. Here, we see that the most orders are placed on Sundays, which means that Sunday is the hottest time of the week to offer deals for customers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>Total_Orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunday</td>\n",
+       "      <td>585237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>monday</td>\n",
+       "      <td>576377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tuesday</td>\n",
+       "      <td>458074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>443388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>saturday</td>\n",
+       "      <td>437749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>wednesday</td>\n",
+       "      <td>428087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>thursday</td>\n",
+       "      <td>417171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_dow  Total_Orders\n",
+       "0     sunday        585237\n",
+       "1     monday        576377\n",
+       "2    tuesday        458074\n",
+       "3     friday        443388\n",
+       "4   saturday        437749\n",
+       "5  wednesday        428087\n",
+       "6   thursday        417171"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "SELECT os.order_dow, count(distinct op.order_id) as Total_Orders\n",
+    "  FROM\n",
+    "    (SELECT order_id\n",
+    "    FROM instacart_modeled.Orders\n",
+    "    GROUP BY order_id) us\n",
+    "  RIGHT OUTER JOIN instacart_modeled.Orders_Beam_DF os\n",
+    "  ON us.order_id=os.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Order_Products op\n",
+    "ON us.order_id=op.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Products p\n",
+    "ON op.product_id=p.product_id\n",
+    "WHERE os.order_dow IS NOT NULL\n",
+    "GROUP BY os.order_dow\n",
+    "ORDER BY Total_Orders desc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -826,15 +1020,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "explanation"
+    "This query describes which of the most popular items are sold 7 days a week. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>No_days_sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Banana</td>\n",
+       "      <td>491291</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bag of Organic Bananas</td>\n",
+       "      <td>394930</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Organic Strawberries</td>\n",
+       "      <td>275577</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Organic Baby Spinach</td>\n",
+       "      <td>251705</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Organic Hass Avocado</td>\n",
+       "      <td>220877</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Organic Avocado</td>\n",
+       "      <td>184224</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Large Lemon</td>\n",
+       "      <td>160792</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Strawberries</td>\n",
+       "      <td>149445</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Limes</td>\n",
+       "      <td>146660</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Organic Whole Milk</td>\n",
+       "      <td>142813</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Organic Raspberries</td>\n",
+       "      <td>142603</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Organic Yellow Onion</td>\n",
+       "      <td>117716</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              product_name  frequency  No_days_sold\n",
+       "0                   Banana     491291             7\n",
+       "1   Bag of Organic Bananas     394930             7\n",
+       "2     Organic Strawberries     275577             7\n",
+       "3     Organic Baby Spinach     251705             7\n",
+       "4     Organic Hass Avocado     220877             7\n",
+       "5          Organic Avocado     184224             7\n",
+       "6              Large Lemon     160792             7\n",
+       "7             Strawberries     149445             7\n",
+       "8                    Limes     146660             7\n",
+       "9       Organic Whole Milk     142813             7\n",
+       "10     Organic Raspberries     142603             7\n",
+       "11    Organic Yellow Onion     117716             7"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "SELECT p.product_name, opb.frequency, count(distinct os.order_dow) as No_days_sold\n",
+    "  FROM\n",
+    "    (SELECT order_id\n",
+    "    FROM instacart_modeled.Orders\n",
+    "    GROUP BY order_id) us\n",
+    "  RIGHT OUTER JOIN instacart_modeled.Orders_Beam_DF os\n",
+    "  ON us.order_id=os.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Order_Products op\n",
+    "ON us.order_id=op.order_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Products p\n",
+    "ON op.product_id=p.product_id\n",
+    "RIGHT OUTER JOIN instacart_modeled.Order_Products_Beam_DF opb\n",
+    "ON opb.product_id  = p.product_id\n",
+    "GROUP BY p.product_name, opb.frequency\n",
+    "HAVING (No_days_sold = 7)\n",
+    "ORDER BY opb.frequency desc\n",
+    "limit 12"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1003,6 +1340,166 @@
     "SELECT * \n",
     "FROM instacart_modeled.v_Loyal_Customers_Top_10_Products\n",
     "ORDER BY frequency DESC\n",
+    "LIMIT 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 5 VIEW\n",
+    "Analyze the orders of the most popular Sunday orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "CREATE OR REPLACE VIEW instacart_modeled.v_Sunday_Orders AS\n",
+    "   ( SELECT os.order_dow, count(distinct op.order_id) as Total_Orders\n",
+    "  FROM\n",
+    "    (SELECT order_id\n",
+    "    FROM `responsive-cab-267123.instacart_modeled.Orders`\n",
+    "    GROUP BY order_id) us\n",
+    "  RIGHT OUTER JOIN `responsive-cab-267123.instacart_modeled.Orders_Beam_DF` os\n",
+    "  ON us.order_id=os.order_id\n",
+    "RIGHT OUTER JOIN `responsive-cab-267123.instacart_modeled.Order_Products` op\n",
+    "ON us.order_id=op.order_id\n",
+    "RIGHT OUTER JOIN `responsive-cab-267123.instacart_modeled.Products` p\n",
+    "ON op.product_id=p.product_id\n",
+    "WHERE os.order_dow IS NOT NULL\n",
+    "GROUP BY os.order_dow\n",
+    "ORDER BY Total_Orders desc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking correct making of view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>Total_Orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunday</td>\n",
+       "      <td>585237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>monday</td>\n",
+       "      <td>576377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tuesday</td>\n",
+       "      <td>458074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>friday</td>\n",
+       "      <td>443388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>saturday</td>\n",
+       "      <td>437749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  order_dow  Total_Orders\n",
+       "0    sunday        585237\n",
+       "1    monday        576377\n",
+       "2   tuesday        458074\n",
+       "3    friday        443388\n",
+       "4  saturday        437749"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery\n",
+    "SELECT * \n",
+    "FROM instacart_modeled.v_Sunday_Orders\n",
+    "ORDER BY Total_Orders DESC\n",
     "LIMIT 5"
    ]
   },
